# singlestoredb-rust-extension-template

./: Cargo.toml  README.md  cookiecutter.json  pytest.ini  {{extension_name}}.sql  {{extension_name}}.wit
.github/workflows/: deployment.yaml
db-tests/: test_create_function.py
src/: lib.rs
{{cookiecutter.project_slug}}/: Cargo.toml  README.md  {{project_slug}}.sql
{{cookiecutter.project_slug}}/.github/workflows/: deployment.yaml  integration.yaml
{{cookiecutter.project_slug}}/db-tests/: test_create_function.py
{{cookiecutter.project_slug}}/src/: lib.rs
